[gd_scene load_steps=5 format=3 uid="uid://bupxmcja155cf"]

[ext_resource type="Script" path="res://MainMenu.gd" id="1_wrjsk"]
[ext_resource type="Texture2D" uid="uid://babjx610tjs26" path="res://assets/black_arrow.png" id="2_roivk"]

[sub_resource type="LabelSettings" id="LabelSettings_hgfff"]
font_size = 31
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_hom47"]
font_size = 18
font_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2.5, 2.5)
script = ExtResource("1_wrjsk")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.690196, 0.690196, 0.690196, 1)

[node name="MainMenu" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleButton" type="Button" parent="MainMenu"]
layout_mode = 2
offset_right = 396.0
offset_bottom = 176.0
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 61
text = "A simple
platformer"
flat = true

[node name="StartButton" type="Button" parent="MainMenu"]
layout_mode = 2
offset_top = 225.0
offset_right = 310.0
offset_bottom = 329.0
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 61
text = "Start"
flat = true
alignment = 0

[node name="OptionsButton" type="Button" parent="MainMenu"]
layout_mode = 2
offset_top = 329.0
offset_right = 310.0
offset_bottom = 433.0
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 61
text = "Options"
flat = true
alignment = 0

[node name="QuitButton" type="Button" parent="MainMenu"]
layout_mode = 2
offset_top = 433.0
offset_right = 310.0
offset_bottom = 537.0
focus_mode = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 61
text = "Quit"
flat = true
alignment = 0

[node name="DifficultyLabel" type="Label" parent="MainMenu"]
layout_mode = 0
offset_left = 746.8
offset_top = 42.8
offset_right = 1119.8
offset_bottom = 133.8
rotation = 0.23326
text = "The game is completable
But quite difficult"
label_settings = SubResource("LabelSettings_hgfff")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CheckOptionsLabel" type="Label" parent="MainMenu"]
layout_mode = 0
offset_left = 364.4
offset_top = 375.6
offset_right = 524.4
offset_bottom = 430.6
rotation = 0.129992
text = "You might want to
check this out"
label_settings = SubResource("LabelSettings_hom47")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect" type="TextureRect" parent="MainMenu/CheckOptionsLabel"]
layout_mode = 0
offset_left = -67.8149
offset_top = 36.7002
offset_right = 4.18512
offset_bottom = 186.7
rotation = -1.62826
scale = Vector2(0.355, 0.355)
texture = ExtResource("2_roivk")

[node name="CreditsButton" type="Button" parent="MainMenu"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -28.0
offset_right = 130.0
grow_vertical = 0
focus_mode = 0
theme_override_colors/font_color = Color(0.141176, 0.141176, 0.141176, 1)
theme_override_font_sizes/font_size = 14
text = "Made by notmae3"
flat = true
alignment = 0

[connection signal="pressed" from="MainMenu/TitleButton" to="." method="_on_title_button_pressed"]
[connection signal="pressed" from="MainMenu/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MainMenu/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="pressed" from="MainMenu/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="MainMenu/CreditsButton" to="." method="_on_credits_button_pressed"]
